--- a/bowtech.html
+++ b/bowtech.html
@@ -5,8 +5,8 @@
 
 <head>
 <!-- #BeginEditable "doctitle" -->
-	<title>Fit Sport: rafting, offroad, catarare, drumetie, volei, ski</title>
-	<meta name="description" content="Rafting, offroad, pesteri, catarare, drumetie, volei, ski - Fit Sport: sanatate prin miscare">
+<title>Bowtech, terapia Bowen, terapeut Paul Culda</title>
+<meta name="description" content="Bowtech, terapia Bowen - terapeut Paul Culda, Fit Sport">
 <!-- #EndEditable -->
 	<meta charset="iso-8859-2">
 	<meta name="robots" content="index,follow,all">
@@ -66,42 +66,16 @@
 		<!-- Begin R Column -->
 		<div id="column_r">
 			<!-- #BeginEditable "content" -->
-			<h1>Fit Sport</h1>
+			<h2>Terapia BOWEN</h2>
 			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque 
 			ornare ipsum at erat. Quisque elementum tempus urna. Donec ornare fringilla 
 			erat. Phasellus gravida lectus vel dui. Fusce eget justo at odio posuere 
 			dignissim.</p>
-			<h2>Rafting</h2>
-			<p>Sed porta, turpis sit amet viverra rhoncus, mauris urna interdum 
-			erat, nec semper dui diam ut libero. Donec adipiscing placerat metus. 
-			Integer eu eros vel risus ornare consequat. Curabitur sem erat, tempor 
-			non, ullamcorper quis, dapibus a, ante. Aliquam tempus tellus eget est. 
-			In hendrerit turpis sed ligula. Integer vulputate nibh congue magna. 
-			Duis commodo leo sit amet quam. Nunc commodo sodales nunc. Donec est 
-			nunc, porttitor et, accumsan nec, pretium quis, mauris. Duis sapien. 
-			Nulla felis lorem, accumsan vitae, ultricies et, hendrerit vel, massa. 
-			In nonummy tortor et metus. Aenean lacinia orci non risus. Aenean vulputate 
-			vel lectus. Aliquam erat volutpat. Duis diam.</p>
-			<h3>Off Road</h3>
-			<ul>
-				<li>Proin sed turpis in urna varius venenatis. Morbi sit amet ligula 
-				eget est semper tempor. Sed sodales, arcu quis semper iaculis, nibh 
-				tortor feugiat purus, et dignissim turpis sem vitae sem. Morbi aliquet 
-				purus eget tellus.</li>
-				<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean 
-				enim justo, tincidunt sed, vestibulum sed, pretium eget, arcu.</li>
-			</ul>
-			<h4>Catarare</h4>
-			<p>Sed porta, turpis sit amet viverra rhoncus, mauris urna interdum 
-			erat, nec semper dui diam ut libero. Donec adipiscing placerat metus. 
-			Integer eu eros vel risus ornare consequat. Curabitur sem erat, tempor 
-			non, ullamcorper quis, dapibus a, ante. Aliquam tempus tellus eget est. 
-			In hendrerit turpis sed ligula. Integer vulputate nibh congue magna. 
-			Duis commodo leo sit amet quam. Nunc commodo sodales nunc. Donec est 
-			nunc, porttitor et, accumsan nec, pretium quis, mauris. Duis sapien. 
-			Nulla felis lorem, accumsan vitae, ultricies et, hendrerit vel, massa. 
-			In nonummy tortor et metus. Aenean lacinia orci non risus. Aenean vulputate 
-			vel lectus. Aliquam erat volutpat. Duis diam.</p>
+			<p><span class="style_bold">Q: [FAQ Question]</span><br>
+			A: [FAQ Answer]</p>
+			<hr>
+			<p><span class="style_bold">Q: [FAQ Question]</span><br>
+			A: [FAQ Answer]</p>
 			<!-- #EndEditable --></div>
 		<!-- End R Column --->
 	</div>
