--- a/rafting.html
+++ b/rafting.html
@@ -1,12 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <!-- #BeginTemplate "zero.dwt" -->
 
 <head>
 <!-- #BeginEditable "doctitle" -->
-	<title>Fit Sport: rafting, offroad, catarare, drumetie, volei, ski</title>
-	<meta name="description" content="Rafting, offroad, pesteri, catarare, drumetie, volei, ski - Fit Sport: sanatate prin miscare">
+	<title>Rafting - Fit Sport: sanatate prin miscare</title>
+	<meta name="description" content="Rafting, drumetie la munte, catarare, rapel, tiroliana - Fit Sport: sanatate prin miscare">
 <!-- #EndEditable -->
 	<meta charset="iso-8859-2">
 	<meta name="robots" content="index,follow,all">
@@ -66,12 +65,12 @@
 		<!-- Begin R Column -->
 		<div id="column_r">
 			<!-- #BeginEditable "content" -->
-			<h1>Fit Sport</h1>
+			<h1>Rafting</h1>
 			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque 
 			ornare ipsum at erat. Quisque elementum tempus urna. Donec ornare fringilla 
 			erat. Phasellus gravida lectus vel dui. Fusce eget justo at odio posuere 
 			dignissim.</p>
-			<h2>Rafting</h2>
+			<h2>Subheading 2</h2>
 			<p>Sed porta, turpis sit amet viverra rhoncus, mauris urna interdum 
 			erat, nec semper dui diam ut libero. Donec adipiscing placerat metus. 
 			Integer eu eros vel risus ornare consequat. Curabitur sem erat, tempor 
@@ -82,7 +81,7 @@
 			Nulla felis lorem, accumsan vitae, ultricies et, hendrerit vel, massa. 
 			In nonummy tortor et metus. Aenean lacinia orci non risus. Aenean vulputate 
 			vel lectus. Aliquam erat volutpat. Duis diam.</p>
-			<h3>Off Road</h3>
+			<h3>Subheading 3</h3>
 			<ul>
 				<li>Proin sed turpis in urna varius venenatis. Morbi sit amet ligula 
 				eget est semper tempor. Sed sodales, arcu quis semper iaculis, nibh 
@@ -91,17 +90,6 @@
 				<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean 
 				enim justo, tincidunt sed, vestibulum sed, pretium eget, arcu.</li>
 			</ul>
-			<h4>Catarare</h4>
-			<p>Sed porta, turpis sit amet viverra rhoncus, mauris urna interdum 
-			erat, nec semper dui diam ut libero. Donec adipiscing placerat metus. 
-			Integer eu eros vel risus ornare consequat. Curabitur sem erat, tempor 
-			non, ullamcorper quis, dapibus a, ante. Aliquam tempus tellus eget est. 
-			In hendrerit turpis sed ligula. Integer vulputate nibh congue magna. 
-			Duis commodo leo sit amet quam. Nunc commodo sodales nunc. Donec est 
-			nunc, porttitor et, accumsan nec, pretium quis, mauris. Duis sapien. 
-			Nulla felis lorem, accumsan vitae, ultricies et, hendrerit vel, massa. 
-			In nonummy tortor et metus. Aenean lacinia orci non risus. Aenean vulputate 
-			vel lectus. Aliquam erat volutpat. Duis diam.</p>
 			<!-- #EndEditable --></div>
 		<!-- End R Column --->
 	</div>
