--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="Rafting, offroad, pesteri, catarare, drumetie, volei, ski - Fit Sport: sanatate prin miscare">
 <!-- #EndEditable -->
 	<meta charset="iso-8859-2">
+	<meta name="google-site-verification" content="8DPn87giRgtaU5ezgI4ciS1eN8D9cvOydojN9fhZgfo" />
 	<meta name="robots" content="index,follow,all">
 	<meta name="author" content="Promovis, web design, gazduire, optimizare web, promovare site web">
 	<meta name="rating" content="general">
